<resources>
    <string name="app_name">Note</string>
    <string name="bytes">MB</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting...</string>
    <string name="db_fault">Database fault</string>
    <string name="download">Download</string>
    <string name="download_file">Download:</string>
    <string name="download_success">Download success</string>
    <string name="download_fault">Download fault</string>
    <string name="google_error">Google Error</string>
    <string name="html_read_fault">Html read fault</string>
    <string name="item">item</string>
    <string name="items">items</string>
    <string name="menu_settings">Settings</string>
    <string name="minus">Minus</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="change">Change background</string>
    <string name="menu_exit">Exit</string>
    <string name="no_google_account">No Google account</string>
    <string name="parentDirectory">..</string>
    <string name="plus">Plus</string>
    <string name="search">Search</string>
    <string name="select_account">Select Google Account…</string>
    <string name="search_fault">Search fault</string>
    <string name="select_file">Select file</string>
    <string name="select_directory">Select directory</string>
    <string name="select_log">Select log</string>
    <string name="select_db_folder">Select DB folder</string>
    <string name="select_download_dir">Select Download Directory</string>
</resources>