<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_previous"
        android:icon="@drawable/ic_action_upload"
        android:showAsAction="ifRoom"
        android:title="@string/previous"></item>
    <item
        android:id="@+id/menu_next"
        android:icon="@drawable/ic_action_download"
        android:showAsAction="ifRoom"
        android:title="@string/next"></item>
    <item
        android:id="@+id/menu_plus"
        android:icon="@drawable/plus"
        android:showAsAction="never"
        android:title="@string/plus"></item>
    <item
        android:id="@+id/menu_minus"
        android:icon="@drawable/minus"
        android:showAsAction="never"
        android:title="@string/minus"></item>
    <item
        android:id="@+id/menu_change_background"
        android:icon="@drawable/file_icon"
        android:showAsAction="never"
        android:title="@string/change"></item>
</menu>
