<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_connect"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="always"
        android:title="@string/connect" />
    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_action_download"
        android:showAsAction="always"
        android:title="@string/download" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/exit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_exit" />
</menu>
